[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["nebula387 <nebula387@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"
say-hello2 = "hello.scripts.say_hello2:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipython = "^8.12.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
